Fix jdk8 issues
Signed-off-by: Peter Nied <petern@amazon.com>